{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 3,
  "lineage": "279130d5-ab7f-eb97-38c1-26e6a4252544",
  "resources": [
    {
      "module": "module.vpc_resources",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "imported_igw",
      "provider": "module.vpc_resources.provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc_resources",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "imported_nat",
      "provider": "module.vpc_resources.provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc_resources",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "imported_rt",
      "provider": "module.vpc_resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "rtb-0e9b16ece22aebeaf",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767828768994:route-table/rtb-0e9b16ece22aebeaf",
            "id": "rtb-0e9b16ece22aebeaf",
            "owner_id": "767828768994",
            "propagating_vgws": [],
            "route": [],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0409d972845c508e4"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.vpc_resources",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "imported_sg",
      "provider": "module.vpc_resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "sg-0528721ca2c264f0f",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767828768994:security-group/sg-0528721ca2c264f0f",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0528721ca2c264f0f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "767828768994",
            "revoke_rules_on_delete": null,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0409d972845c508e4"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_resources",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "imported_subnet",
      "provider": "module.vpc_resources.provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc_resources",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "imported_vpc",
      "provider": "module.vpc_resources.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "vpc-0409d972845c508e4",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767828768994:vpc/vpc-0409d972845c508e4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06a6fd024d8878b8a",
            "default_route_table_id": "rtb-0e9b16ece22aebeaf",
            "default_security_group_id": "sg-0528721ca2c264f0f",
            "dhcp_options_id": "dopt-0fef6698218df96df",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0409d972845c508e4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e9b16ece22aebeaf",
            "owner_id": "767828768994",
            "tags": {
              "Name": "arun-test"
            },
            "tags_all": {
              "Name": "arun-test"
            }
          }
        }
      ]
    }
  ]
}